--- a/index.html
+++ b/index.html
@@ -1,1 +1,133 @@
 <!-- In this file you are going to write html code -->
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/main.css" />
+    <!--<link rel="stylesheet" href="styles/reset.css" />-->
+    <title>Home</title>
+</head>
+
+<body>
+
+    <header class="transparent_nav">
+        <nav class="nav_bar">
+            <img src="img/nib.svg" alt="Logo" height=" 25px " width="25px " style="float: left; padding: 14px 16px;" />
+            <ul id="nav_list">
+                <li id="nav_item_1">
+                    <a href="#ourstory">Our Story</a>
+                </li>
+                <li id="nav_item_2">
+                    <a href="#products">Products</a>
+                </li>
+                <li id="nav_item_3">
+                    <a href="#journal">Journal</a>
+                </li>
+                <li id="nav_item_4">
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <br><br>
+    <section class="cta">
+        <p id="cta_text">Have a project in mind? We would love to hear from you! </p>
+        <a id="cta_link" href="#getintouch">GET IN TOUCH WITH US</a>
+
+    </section>
+    <br><br>
+    <section class="service_wrapper">
+        <ul>
+            <li class="c1">
+                <img src="img/box.svg" alt="Image" height="50px" width="50px" /><br>
+                <h2>Heading</h2>
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+            <li class="c1">
+                <img src="img/nib.svg" alt="Image" height="50px" width="50px" /><br>
+                <h2>Heading</h2>
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+            <li class="c1">
+                <img src="img/laptop.svg" alt="Image" height="50px" width="50px" /><br>
+                <h2>Heading</h2>
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+        </ul>
+    </section>
+    <section class="recent_work">
+        <img src="img/img1.jpg" alt="Home" height="250px" width="250px" />
+        <img src="img/img2.jpg" alt="Home" height="250px" width="250px" />
+        <img src="img/img3.jpg" alt="Home" height="250px" width="250px" />
+        <img src="img/img4.jpg" alt="Home" height="250px" width="250px" />
+        <img src="img/img1.jpg" alt="Home" height="250px" width="250px" />
+    </section>
+    <br><br>
+    <h1 style="color: chocolate; text-align: center; text-transform: uppercase; "> Testimonials</h1>
+    <br><br>
+    <section class="testimonials_wrapper">
+        <ul>
+            <li class="c1">
+                <img src="img/user.svg" alt="Image" height="50px" width="50px" /><br>
+                <h2>John Doe
+                    <p style="font-size: small;">CEO</p>
+                </h2>
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+            <li class="c1">
+                <img src="img/user.svg" alt="Image" height="50px" width="50px" /><br>
+                <h2>John Doe
+                    <p style="font-size: small;">CTO</p>
+                </h2>
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+            <li class="c1">
+                <img src="img/user.svg" alt="Image" height="50px" width="50px" /><br>
+                <h2>John Doe
+                    <p style="font-size: small;">PTO</p>
+                </h2>
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+        </ul>
+    </section>
+    <footer>
+        <footer_widget class="footer">
+            <div>
+                <h1>Location</h1>
+                <p>3301 New Mexico Avenue Washigaton DC 333 333 </p>
+                <img src="img/fb.svg" height="20px" width="20px" />
+                <img src="img/insta.svg" height="20px" width="20px" />
+                <img src="img/twitter.svg" height="20px" width="20px" />
+            </div>
+            <div>
+                <h1>Company</h1>
+                <ul>
+                    <li id="comp_item-1"><a href="#ourstory">Our Story</a></li>
+                    <li id="comp_item-2"><a href="#vision">Vision</a></li>
+                    <li id="comp_item-3"><a href="#journal">Journal</a></li>
+                    <li id="comp_item-4"><a href="#products">Products </a></li>
+                </ul>
+            </div>
+            <div>
+                <h1>Support</h1>
+                <ul>
+                    <li id="sup_item_1"><a href="#faq">FAQ's</a></li>
+                    <li id="sup_item_1"><a href="#contactus">Contact Us</a></li>
+                    <li id="sup_item_1"><a href="#policies">Policies</a></li>
+                </ul>
+            </div>
+            <div>
+                <h1>ARK Studio</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+        </footer_widget>
+        <p class="rights">&#169;2014 ARK Studio - All Rights Reserved</p>
+
+    </footer>
+
+</body>
+
+</html>
