--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div>
                 <h1>Company</h1>
-                <ul>
+                <ul id="comp_list">
                     <li id="comp_item-1"><a href="#ourstory">Our Story</a></li>
                     <li id="comp_item-2"><a href="#vision">Vision</a></li>
                     <li id="comp_item-3"><a href="#journal">Journal</a></li>
@@ -113,10 +113,10 @@
             </div>
             <div>
                 <h1>Support</h1>
-                <ul>
+                <ul id="sup_list">
                     <li id="sup_item_1"><a href="#faq">FAQ's</a></li>
-                    <li id="sup_item_1"><a href="#contactus">Contact Us</a></li>
-                    <li id="sup_item_1"><a href="#policies">Policies</a></li>
+                    <li id="sup_item_2"><a href="#contactus">Contact Us</a></li>
+                    <li id="sup_item_3"><a href="#policies">Policies</a></li>
                 </ul>
             </div>
             <div>
