--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </section>
     <br><br>
-    <section class="service_wrapper">
+    <section class="services-wrapper">
         <ul>
             <li class="c1">
                 <img src="img/box.svg" alt="Image" height="50px" width="50px" /><br>
@@ -68,7 +68,7 @@
     <br><br>
     <h1 style="color: chocolate; text-align: center; text-transform: uppercase; "> Testimonials</h1>
     <br><br>
-    <section class="testimonials_wrapper">
+    <section class="testimonials-wrapper">
         <ul>
             <li class="c1">
                 <img src="img/user.svg" alt="Image" height="50px" width="50px" /><br>
@@ -105,16 +105,16 @@
             <div>
                 <h1>Company</h1>
                 <ul id="comp_list">
-                    <li id="comp_item-1"><a href="#ourstory">Our Story</a></li>
-                    <li id="comp_item-2"><a href="#vision">Vision</a></li>
-                    <li id="comp_item-3"><a href="#journal">Journal</a></li>
-                    <li id="comp_item-4"><a href="#products">Products </a></li>
+                    <li id="comp_item_1"><a href="#ourstory">Our Story</a></li>
+                    <li id="comp_item_2"><a href="#vision">Vision</a></li>
+                    <li id="comp_item_3"><a href="#journal">Journal</a></li>
+                    <li id="comp_item_4"><a href="#products">Products </a></li>
                 </ul>
             </div>
             <div>
                 <h1>Support</h1>
                 <ul id="sup_list">
-                    <li id="sup_item_1"><a href="#faq">FAQ's</a></li>
+                    <li id="sup_item_1"><a href="#faq">FAQ</a></li>
                     <li id="sup_item_2"><a href="#contactus">Contact Us</a></li>
                     <li id="sup_item_3"><a href="#policies">Policies</a></li>
                 </ul>
@@ -124,7 +124,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             </div>
         </footer_widget>
-        <p class="rights">&#169;2014 ARK Studio - All Rights Reserved</p>
+        <p class="rights">"2014 ARK Studio - All Rights Reserved"</p>
 
     </footer>
 
