--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </ul>
     </section>
     <footer>
-        <footer_widget class="footer">
+        <footer_widget class="footer_widget">
             <div>
                 <h1>Location</h1>
                 <p>3301 New Mexico Avenue Washigaton DC 333 333 </p>
@@ -106,9 +106,9 @@
                 <h1>Company</h1>
                 <ul id="comp_list">
                     <li id="comp_item_1"><a href="#ourstory">Our Story</a></li>
-                    <li id="comp_item_2"><a href="#vision">Vision</a></li>
+                    <li id="comp_item_2"><a href="#vision">Mission</a></li>
                     <li id="comp_item_3"><a href="#journal">Journal</a></li>
-                    <li id="comp_item_4"><a href="#products">Products </a></li>
+                    <li id="comp_item_4"><a href="#products">Careers </a></li>
                 </ul>
             </div>
             <div>
