--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             </div>
         </footer_widget>
-        <p class="rights">"2014 ARK Studio - All Rights Reserved"</p>
+        <p class="rights">2014 ARK Studio - All Rights Reserved</p>
 
     </footer>
 
