--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </section>
     <br><br>
-    <section class="services-wrapper">
+    <section class="services wrapper">
         <ul>
             <li class="c1">
                 <img src="img/box.svg" alt="Image" height="50px" width="50px" /><br>
@@ -68,7 +68,7 @@
     <br><br>
     <h1 style="color: chocolate; text-align: center; text-transform: uppercase; "> Testimonials</h1>
     <br><br>
-    <section class="testimonials-wrapper">
+    <section class="testimonials wrapper">
         <ul>
             <li class="c1">
                 <img src="img/user.svg" alt="Image" height="50px" width="50px" /><br>
