--- a/index.html
+++ b/index.html
@@ -93,37 +93,39 @@
             </li>
         </ul>
     </section>
-    <footer class="footer_widget">
+    <footer>
+        <footer_widget class="footer_widget">
 
-        <div>
-            <h1>Location</h1>
-            <p>3301 New Mexico Avenue Washigaton DC 333 333 </p>
-            <img src="img/fb.svg" height="20px" width="20px" />
-            <img src="img/insta.svg" height="20px" width="20px" />
-            <img src="img/twitter.svg" height="20px" width="20px" />
-        </div>
-        <div>
-            <h1>Company</h1>
-            <ul id="comp_list">
-                <li id="comp_item_1"><a href="#ourstory">Our Story</a></li>
-                <li id="comp_item_2"><a href="#vision">Mission</a></li>
-                <li id="comp_item_3"><a href="#journal">Journal</a></li>
-                <li id="comp_item_4"><a href="#products">Careers </a></li>
-            </ul>
-        </div>
-        <div>
-            <h1>Support</h1>
-            <ul id="sup_list">
-                <li id="sup_item_1"><a href="#faq">FAQ</a></li>
-                <li id="sup_item_2"><a href="#contactus">Contact Us</a></li>
-                <li id="sup_item_3"><a href="#policies">Policies</a></li>
-            </ul>
-        </div>
-        <div>
-            <h1>ARK Studio</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-        <p class="rights">2014 ARK Studio - All Rights Reserved</p>
+            <div>
+                <h1>Location</h1>
+                <p>3301 New Mexico Avenue Washigaton DC 333 333 </p>
+                <img src="img/fb.svg" height="20px" width="20px" />
+                <img src="img/insta.svg" height="20px" width="20px" />
+                <img src="img/twitter.svg" height="20px" width="20px" />
+            </div>
+            <div>
+                <h1>Company</h1>
+                <ul id="comp_list">
+                    <li id="comp_item_1"><a href="#ourstory">Our Story</a></li>
+                    <li id="comp_item_2"><a href="#vision">Mission</a></li>
+                    <li id="comp_item_3"><a href="#journal">Journal</a></li>
+                    <li id="comp_item_4"><a href="#products">Careers </a></li>
+                </ul>
+            </div>
+            <div>
+                <h1>Support</h1>
+                <ul id="sup_list">
+                    <li id="sup_item_1"><a href="#faq">FAQ</a></li>
+                    <li id="sup_item_2"><a href="#contactus">Contact Us</a></li>
+                    <li id="sup_item_3"><a href="#policies">Policies</a></li>
+                </ul>
+            </div>
+            <div>
+                <h1>ARK Studio</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <p class="rights">2014 ARK Studio - All Rights Reserved</p>
+        </footer_widget>
 
     </footer>
 
