--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
             </li>
         </ul>
     </section>
-    <footer>
+    <footer class="footer_widget">
         <footer_widget class="footer">
 
-            <div class="footer_widget">
+            <div>
                 <h1>Location</h1>
                 <p>3301 New Mexico Avenue Washigaton DC 333 333 </p>
                 <img src="img/fb.svg" height="20px" width="20px" />
                 <img src="img/insta.svg" height="20px" width="20px" />
                 <img src="img/twitter.svg" height="20px" width="20px" />
             </div>
-            <div class="footer_widget">
+            <div>
                 <h1>Company</h1>
                 <ul id="comp_list">
                     <li id="comp_item_1"><a href="#ourstory">Our Story</a></li>
@@ -112,7 +112,7 @@
                     <li id="comp_item_4"><a href="#products">Careers </a></li>
                 </ul>
             </div>
-            <div class="footer_widget">
+            <div>
                 <h1>Support</h1>
                 <ul id="sup_list">
                     <li id="sup_item_1"><a href="#faq">FAQ</a></li>
@@ -120,7 +120,7 @@
                     <li id="sup_item_3"><a href="#policies">Policies</a></li>
                 </ul>
             </div>
-            <div class="footer_widget">
+            <div>
                 <h1>ARK Studio</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             </div>
