--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             </li>
         </ul>
     </section>
-    <footer class="footer_widget">
+    <footer>
         <footer_widget class="footer">
 
-            <div>
+            <div class="footer_widget">
                 <h1>Location</h1>
                 <p>3301 New Mexico Avenue Washigaton DC 333 333 </p>
                 <img src="img/fb.svg" height="20px" width="20px" />
