--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <footer>
         <footer_widget class="footer">
 
-            <div class="footer_widget">
+            <div>
                 <h1>Location</h1>
                 <p>3301 New Mexico Avenue Washigaton DC 333 333 </p>
                 <img src="img/fb.svg" height="20px" width="20px" />
