--- a/index.html
+++ b/index.html
@@ -94,8 +94,12 @@
         </ul>
     </section>
     <footer>
-        <footer_widget class="footer">
+        <footer_widget>
+            <p id="cta_text">Have a project in mind? We would love to hear from you! </p>
+            <a id="cta_link" href="#getintouch">GET IN TOUCH WITH US</a>
 
+        </footer_widget>
+        <div class="footer_widget">
             <div>
                 <h1>Location</h1>
                 <p>3301 New Mexico Avenue Washigaton DC 333 333 </p>
@@ -124,8 +128,9 @@
                 <h1>ARK Studio</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             </div>
-            <p class="rights">2014 ARK Studio - All Rights Reserved</p>
-        </footer_widget>
+        </div>
+        <p class="rights">2014 ARK Studio - All Rights Reserved</p>
+
 
     </footer>
 
